--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Hello, I'm Syed Tanveer Jishan. Machine Learning Enthusiast.">
-    <meta name="keywords" content="HTML,CSS,JavaScript, Syed Tanveer Jishan, Syed, Tanveer, Jishan, Big Data, Machine Learning, Computer Science, Programming">
-    <meta name="author" content="Al_ekram Elahee Hridoy" >
+    <meta name="description" content="Hello, Al-Ekram Elahee Hridoy.">
+    <meta name="keywords" content="HTML,CSS,JavaScript, Al-Ekram Elahee Hridoy, Hridoy, GEOAI,Spatial data science, Public Health, Big Data, Machine Learning, Computer Science, Programming">
+    <meta name="author" content="Al-Ekram Elahee Hridoy" >
 
     <title>Al-Ekram Elahee Hridoy</title>
 
@@ -83,8 +83,8 @@
                     <div class="intro-text">
                         <span class="name">Hello, I'm Al-Ekram Elahee Hridoy.</span>
                         <hr class="star-light">
-                        <span class="skills">Geo-spatial data science enthusiast </span><br/>
-                        <span class="skills">Experience in, Python and TensorFlow, Google Earth Engine. Ocassionaly works with R and Qgis.</span>
+                        <span class="skills">A web developer and Geo-spatial data science enthusiast </span><br/>
+                        <span class="skills">Experience in, Python, JavaScript and  Google Earth Engine. Ocassionaly, i  work with R and QGIS.</span>
                     </div>
                 </div>
             </div>
@@ -106,11 +106,34 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <p>I am passionate about Artificial Intelligence, particularly GEOAI. Currently, I am working as a research assistant. I have received a Bachelors in Geography And Environmental Studies from Univeristy of Chittagong .</p>
                 </div>
+            </div>
+
            <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="Resume_Syed.pdf" target="_blank" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Check My Resume
                     </a>
                 </div> 
+
+                <div class="row">
+                    <div class="col-lg-8 text-center col-lg-offset-2  ">
+                        <h2>Research Interests</h2>
+                        <hr class="star-light">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class=" col-lg-8 text-center col-lg-offset-2 ">
+                        <p>Big data analytics</p>
+                        <p>Spatial and social data mining </p>
+                        <p>Spatio-temporal data mining</p>
+                        <p>GEOAI and Deep learning</p>
+                        <p> Spatial data science</p>
+                        <p>Social Sensing</p>
+                        <p>Human mobility</p>
+                        <p>Natural Hazards</p>
+                        <p>Climate Change</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -267,16 +290,18 @@
     <section id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12  text-center">
                     <h2>Contact Me</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                  <h4 style="display:inline;">Phone:</h4> +8801789543794 <br/ > 
+                <div class="col-lg-8 col-lg-offset-2 text-center ">
+                  <h4 style=>Phone:</h4> +8801789543794 <br/ > 
                  <!-- <span style=" font-size: 11px; font-style:italic; text-align:center !important;"><strong>(Key:</strong> First three letters of my name <strong> &nbsp; Hint:</strong> World War II)</span> <br/> <br/> -->
-                  <h4 style="display:inline;">Email:</h4> <a href="aliqramalaheehridoy@gmail.com"> aliqramalaheehridoy@gmail.com</a>
+                  <h4 style= >Email:</h4> <a href="aliqramalaheehridoy@gmail.com"> aliqramalaheehridoy@gmail.com</a>
+
+                  <h4>Research Gate:</h4> <a href="https://www.researchgate.net/profile/Al-Ekram-Hridoy">Al-Ekram Elahee Hridoy</a>
               </div>
           </div>
       </div>
@@ -600,182 +625,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="chascriptModal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h3>Cha Script</h3>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/chascript.png" class="img-responsive img-centered" alt="">
-                            <p>As technology is evolving as a driving force in our
-                                society, the need for computer programming is arising.
-                                However, since most of the computer programming languages
-                                are English-based, they can act as barriers for learning
-                                computer programming for people who are not adequate in
-                                English. We have build a Bengali programming system with the goal to help Bengali speaking people learn and write computer programs.</p>
-                                <ul class="list-inline item-details">
-                                    <li>Website:
-                                        <strong><a href="http://sjishan.github.io/chascript">sjishan.github.io/chascript</a>
-                                        </strong>
-                                    </li>
-                                    <li>Git Hub:
-                                        <strong><a href="https://github.com/sjishan/chascript">github.com/sjishan/chascript</a>
-                                        </strong>
-                                    </li>
-                                </ul>
-                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="portfolio-modal modal fade" id="obModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h3>Optimum Binning + SMOTE based Grade Prediction Models</h3>
-                                <hr class="star-primary">
-                                <img src="img/portfolio/ob.png" class="img-responsive img-centered" alt="">
-                                <p> There is a perpetual elevation in demand for higher education in the last decade all over the world; therefore, the need for improving the education system is imminent. Educational Data Mining is a newly-visible area in the field of Data Mining and it can be applied to better understand the educational systems in Bangladesh. In this research, we present how data can be preprocessed using a discretization method called the Optimal Equal Width Binning and an over-sampling technique known as the Synthetic Minority Over-Sampling (SMOTE) to improve the accuracy of the students' final grade prediction model for a particular course. In order to validate our method we have used data from a course offered at North South University, Bangladesh. The result obtained from the experiment gives a clear indication that the accuracy of the prediction model improves significantly when the discretization and over-sampling methods are applied.</p>
-                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="portfolio-modal modal fade" id="kajerkhojModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h3>Kajer Khoj</h3>
-                                <hr class="star-primary">
-                                <img src="img/portfolio/kajerkhoj.png" class="img-responsive img-centered" alt="">
-                                <p>Job Search Engine for Bangladesh. Built using PHP framework CodeIgniter with Bootstrap on the frontend for responsive design.</p>
-                                <ul class="list-inline item-details">
-                                    <li>Github:
-                                        <strong><a href="https://github.com/sjishan/kajerkhoj" target="_blank">github.com/sjishan/kajerkhoj</a>
-                                        </strong>
-                                    </li>
-
-                                </ul>
-                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- <div class="portfolio-modal modal fade" id="smspeonModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h2>SMS Peon</h2>
-                                <hr class="star-primary">
-                                <img src="img/portfolio/smspeon.png" class="img-responsive img-centered" alt="">
-                                <p>Bulk SMS Website (Developed the Frontend of the System)</p>
-                                <ul class="list-inline item-details">
-                                    <li>Website:
-                                        <strong><a href="http://smspeon.com" target="_blank">smspeon.com</a>
-                                        </strong>
-                                    </li>
-                                </ul>
-                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <div class="portfolio-modal modal fade" id="sosbdModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h2>SOS BD</h2>
-                                <hr class="star-primary">
-                                <img src="img/portfolio/sosbd.png" class="img-responsive img-centered" alt="">
-                                <p>The idea behind the development of SOS BD is to provide people of Bangladesh with a sophisticated mobile application that will come in handy during emergency situations. This application minimize the communication gap between the people and the emergency services such as Ambulance, Fire Service etc. Finding the global position of the user and using that to calculate the nearest emergency services available for the user is the main goal of the application.Furthermore, “Quick SMS” service is being integrated so that the user can send text messages to certain phone numbers, automatically stating his/her location along with global position.
-                                </p>
-                                <ul class="list-inline item-details">
-                                    <li>Download:
-                                        <strong>APK will be available soon
-                                        </strong>
-                                    </li>
-                                </ul>
-                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="portfolio-modal modal fade" id="microprocessorModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-content">
-                <div class="close-modal" data-dismiss="modal">
-                    <div class="lr">
-                        <div class="rl">
-                        </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="modal-body">
-                                <h2>8-bit programmable miprocessor</h2>
-                                <hr class="star-primary">
-                                <img src="img/portfolio/microprocessor.png" class="img-responsive img-centered" alt="">
-                                <p>8-bit programmable miprocessor. 12 instructions available. Supports conditional and loop operation.</p>
-
-                                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+   
 
         <!-- jQuery -->
         <script src="js/jquery.js"></script>
