--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
 
            <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="Resume_Syed.pdf" target="_blank" class="btn btn-lg btn-outline">
+                    <a href="Resume_Hridoy.pdf" target="_blank" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Check My Resume
                     </a>
                 </div> 
