--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="intro-text">
                         <span class="name">Hello, I'm Al-Ekram Elahee Hridoy.</span>
                         <hr class="star-light">
-                        <span class="skills">A web developer and Geo-spatial data science enthusiast </span><br/>
+                        <span class="skills">A Researcher,Web developer and Geo-spatial data science enthusiast </span><br/>
                         <span class="skills">Experience in, Python, JavaScript and  Google Earth Engine. Ocassionaly, i  work with R and QGIS.</span>
                     </div>
                 </div>
