--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                 </div>
             </div>
 
-           <div class="col-lg-8 col-lg-offset-2 text-center">
+         <!--  <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="Resume_Hridoy.pdf" target="_blank" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Check My Resume
                     </a>
-                </div> 
+                </div> -->
 
                 <div class="row">
                     <div class="col-lg-8 text-center col-lg-offset-2  ">
