--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <span class="name">Hello, I'm Al-Ekram Elahee Hridoy.</span>
                         <hr class="star-light">
                         <span class="skills">A Researcher,Web developer and Geo-spatial data science enthusiast </span><br/>
-                        <span class="skills">Experience in, Python, JavaScript and  Google Earth Engine. Ocassionaly, i  work with R and QGIS.</span>
+                        <span class="skills">Experience in, Python, JavaScript,R, QGIS, Google Earth Engine and web GIS.</span>
                     </div>
                 </div>
             </div>
