--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
+                    <p>I'm interested in spatial analytic data-driven approaches used to depict, explore, analyze, and model in geographical space  in relation to time in Geographical Science as a whole. Spatio-temporal thinking has enormous potential in computational and data-driven science, and my fundamental belief is that science should serve humanity, society, and the environment.</p>
                     <p>I am passionate about Artificial Intelligence, particularly GEOAI. Currently, I am working as a research assistant. I have received a Bachelors in Geography And Environmental Studies from Univeristy of Chittagong .</p>
                 </div>
             </div>
