--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <a href="https://wolf-dev.github.io/bdcovid19/index.html">
+                        <a href="https://alhridoy.github.io/bdcovid19/index.html">
                          <img src="img/portfolio/bd_COVID.png" class="img-responsive" alt="">
                         </a>
                         <p style="font-size:88%;" align="center" >COVID-19 Tracker in Bangladesh</p>
@@ -232,7 +232,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <a href=" https://github.com/wolf-dev/Rt_Bd ">
+                        <a href=" https://github.com/alhridoy/Rt_Bd ">
 
                         
                         <img src="img/portfolio/bd_r_aug.png" class="img-responsive" alt="">
@@ -250,7 +250,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <a href="https://github.com/wolf-dev/COVID_mobility_BD ">
+                        <a href="https://github.com/alhridoy/COVID_mobility_BD ">
                         <img src="img/portfolio/ANN.png" class="img-responsive" alt="">
                         <p style="font-size:88%;" align="center" > 
                                 Predicting COVID-19 transmission in Bangladesh using mobility data: a machine learning approach
@@ -268,7 +268,7 @@
                             </div>
                         </div>
 
-                        <a href="https://github.com/wolf-dev/Sentiment_COVID_bd">
+                        <a href="https://github.com/alhridoy/Sentiment_COVID_bd">
                         <img src="img/portfolio/sentiment.png" class="img-responsive" alt="">
                          <p style="font-size:88%;" align="center" >
                                 Sentiment analysis of public opinion on vaccination in Bangladesh using Twitter data
