--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="intro-text">
                         <span class="name">Hello, I'm Al-Ekram Elahee Hridoy.</span>
                         <hr class="star-light">
-                        <span class="skills">A Researcher,Web developer and Geo-spatial data science enthusiast </span><br/>
+                        <span class="skills">A Researcher and Developer </span><br/>
                         <span class="skills">Experience in, Python, JavaScript,R, QGIS, Google Earth Engine and web GIS.</span>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p>I'm interested in spatial analytic data-driven approaches used to depict, explore, analyze, and model in geographical space  in relation to time in Geographical Science as a whole. Spatio-temporal thinking has enormous potential in computational and data-driven science, and my fundamental belief is that science should serve humanity, society, and the environment.</p>
+                    <p>I'm interested in  data-driven approaches used to depict, explore, analyze, and model in spatial context.I believe Spatio-temporal thinking has enormous potential in computational and data-driven science, and my fundamental belief is that science should serve humanity, society, and the environment.</p>
                     <p>I am passionate about Artificial Intelligence, particularly GEOAI. Currently, I am working as a research assistant. I have received a Bachelors in Geography And Environmental Studies from Univeristy of Chittagong .</p>
                 </div>
             </div>
@@ -124,10 +124,11 @@
                 <div class="row">
                     <div class=" col-lg-8 text-center col-lg-offset-2 ">
                         <p>Big data analytics</p>
+                        <p> Spatial data science </p>
                         <p>Spatial and social data mining </p>
                         <p>Spatio-temporal data mining</p>
                         <p>GEOAI and Deep learning</p>
-                        <p> Spatial data science</p>
+                        
                         <p>Social Sensing</p>
                         <p>Human mobility</p>
                         <p>Natural Hazards</p>
