--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
                             <a href="https://twitter.com/ts270890" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                         </li> -->
                         <li>
-                            <a href="https://www.linkedin.com/in/sjishan/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/aliqramalahee/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                         </li>
                         <li>
-                            <a href="https://github.com/wolf-dev" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+                            <a href="https://github.com/alhridoy" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
