--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                 </div>
             </div>
 
-         <!--  <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="Resume_Hridoy.pdf" target="_blank" class="btn btn-lg btn-outline">
+           <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="CV of AL-Ekram Elahee Hridoy.pdf" target="_blank" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Check My Resume
                     </a>
-                </div> -->
+                </div> 
 
                 <div class="row">
                     <div class="col-lg-8 text-center col-lg-offset-2  ">
@@ -132,7 +132,7 @@
                         <p>Social Sensing</p>
                         <p>Human mobility</p>
                         <p>Natural Hazards</p>
-                        <p>Climate Change</p>
+                        <p>Remote Sensing </p>
                     </div>
                 </div>
 
