--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <span class="name">Hello, I'm Al-Ekram Elahee Hridoy.</span>
                         <hr class="star-light">
                         <span class="skills">A Researcher and Developer </span><br/>
-                        <span class="skills">Experience in, Python, JavaScript,R, QGIS, Google Earth Engine and web GIS.</span>
+                        <span class="skills">Experience in, Python, JavaScript,R, QGIS, Google Earth Engine.</span>
                     </div>
                 </div>
             </div>
