--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                         
                         <p>Social Sensing</p>
                         <p>Human mobility</p>
+                        <Public Health </p>
                         <p>Natural Hazards</p>
                         <p>Remote Sensing </p>
                     </div>
