--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                 <div class="row">
                     <div class=" col-lg-8 text-center col-lg-offset-2 ">
                         <div>
-                        <h2>Data Science Instructor (Octobor 2021- Present)</h2>
-                           <p>Data Science Instructor, Institute of Forestry and Environmental Science, University of Chittagong, Chittagong, Bangladesh
-Conducting a course on Python, data analysis, machine learning algorithms. Over 60 learning enthusiasts enrolled in this course.</p>
+                        <p>Data Science Instructor (Octobor 2021- Present)</p>
+                           <li>Data Science Instructor, Institute of Forestry and Environmental Science, University of Chittagong, Chittagong, Bangladesh
+Conducting a course on Python, data analysis, machine learning algorithms. Over 60 learning enthusiasts enrolled in this course.</li>
                         </div>
                     </div>
                 </div>
