--- a/index.html
+++ b/index.html
@@ -159,9 +159,13 @@
                 <div class="row">
                     <div class=" col-lg-8 text-center col-lg-offset-2 ">
                         <div>
-                        <p>Data Science Instructor (Octobor 2021- Present)</p>
-                           <li>Data Science Instructor, Institute of Forestry and Environmental Science, University of Chittagong, Chittagong, Bangladesh
+                        <p>Data Science Instructor, Institute of Forestry and Environmental Science, University of Chittagong, Chittagong, Bangladesh (Octobor 2021- Present)</p>
+                           <li>Data Science Instructor,
 Conducting a course on Python, data analysis, machine learning algorithms. Over 60 learning enthusiasts enrolled in this course.</li>
+                            
+                          <p> Programming Instructor,Bangladesh Agriculture University and Bangladesh and King Fahd of Petroleum & Minerals, Saudi Arabia (June 2021- July 2021)
+                              
+                              <li>Conducted an online course on Python programming language, data analysis and statistical modelling in Python.</p>
                         </div>
                     </div>
                 </div>
