--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <span class="name">Hello, I'm Al-Ekram Elahee Hridoy.</span>
                         <hr class="star-light">
                         <span class="skills">A Researcher and Developer </span><br/>
-                        <span class="skills">Experience in, Python, JavaScript,R, QGIS,and Google Earth Engine.</span>
+                        <span class="skills">Experience in Python, JavaScript,R and Google Earth Engine.</span>
                     </div>
                 </div>
             </div>
