--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <p>I'm interested in  data-driven approaches used to depict, explore, analyze, and model spatial complex problems. I believe Spatio-temporal thinking has enormous potential and my fundamental belief is that science should serve humanity, society, and the environment.</p>
+                    <p>I'm interested in  data-driven approaches used to depict, explore, analyze, and model spatial complex problem</p>
                     <p>I am passionate about GEOAI,  Spatial Data Science and Spatio-temporal modelling. Currently, I am working as a research assistant. I have received a Bachelors in Geography And Environmental Studies from Univeristy of Chittagong .</p>
                 </div>
             </div>
