--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
+                    <li class="page-scoll">
+                        <a href="https://github.com/alhridoy">GitHub</a>
+                    </li>                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -85,8 +88,8 @@
                     <div class="intro-text">
                         <span class="name">Hello, I'm Al-Ekram Elahee Hridoy.</span>
                         <hr class="star-light">
-                        <span class="skills">A Researcher and Developer </span><br/>
-                        <span class="skills">Experience in Python, JavaScript,R and Google Earth Engine.</span>
+                        <span class="skills">A Researcher and Software Developer </span><br/>
+                      
                     </div>
                 </div>
             </div>
