--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
-                    <li class="page-scoll">
+                    <li class="page-scroll">
                         <a href="https://github.com/alhridoy">GitHub</a>
                     </li>                    
                 </ul>
