--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="intro-text">
                         <span class="name">Hello, I'm Al-Ekram Elahee Hridoy.</span>
                         <hr class="star-light">
-                        <span class="skills">A Researcher and Software Developer </span><br/>
+                        <span class="skills"> </span><br/>
                       
                     </div>
                 </div>
